--- a/src/css/layout/menu.scss
+++ b/src/css/layout/menu.scss
@@ -67,7 +67,7 @@
     animation: bg-gradient 40s ease infinite;
   }
 
-  #features {
+  #features, #hero {
     display: none;
   }
 }
